tests/invalid/bad-element-order.hcdf
<?xml version="1.0"?>
<hcdf version="1.0">
  <network name="net1"/>
  <joint name="j1" type="fixed">
    <parent comp="a"/>
    <child comp="b"/>
  </joint>
</hcdf>
